Final Titanic Project code

--- a/Project_1_titanic_starter_code_Jordan_Fritz.ipynb
+++ b/Project_1_titanic_starter_code_Jordan_Fritz.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [
     {
@@ -291,20 +291,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-255-b753919ed6b1>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-255-b753919ed6b1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    data_dict_comp = {data_dict[b] = {} if a == 'PassengerId' else data_dict[b].update({a:b}) for j in data and a,b in zip(header, j)}\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "{'1': {'Age': '22',\n",
+       "  'Cabin': '',\n",
+       "  'Embarked': 'S',\n",
+       "  'Fare': '7.25',\n",
+       "  'Name': 'Braund, Mr. Owen Harris',\n",
+       "  'Parch': '0',\n",
+       "  'Pclass': '3',\n",
+       "  'Sex': 'male',\n",
+       "  'SibSp': '1',\n",
+       "  'Survived': '0',\n",
+       "  'Ticket': 'A/5 21171'}}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "data_dict_comp = {data_dict[b] = {} if a == 'PassengerId' else data_dict[b].update({a:b}) for j in data and a,b in zip(header, j)}"
+    "# tried to create a dictionary comprehension. For some reason, it outputs two nested dictionaries with the PassengerId as a key for the first two. If the 'j[0] term is deleted from the line 'data_dict_comp[j[0]] = .....' then the output is correct, however it is only the last passenger (ID = 891)\n",
+    "\n",
+    "data_dict_comp = {}\n",
+    "\n",
+    "for j in data:\n",
+    "    dict_comprehension = {a:b for a, b in zip(header, j) if a != 'PassengerId'}\n",
+    "    data_dict_comp[j[0]] = {b:dict_comprehension for a, b in zip(header, j) if a =='PassengerId'}\n",
+    "    \n",
+    "display(data_dict_comp['1'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " {b: for a, b in zip(header, j) if a == 'PassengerId'}"
    ]
   },
   {
